[gd_scene load_steps=7 format=3 uid="uid://j2becpejt8xr"]

[ext_resource type="Script" uid="uid://b2v11121ukc82" path="res://Scripts/Effect/ExplosionEffect.gd" id="1_nkahb"]

[sub_resource type="Gradient" id="Gradient_3ju4k"]
offsets = PackedFloat32Array(0.542424, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nkahb"]
gradient = SubResource("Gradient_3ju4k")

[sub_resource type="Curve" id="Curve_3ju4k"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_nkahb"]
curve = SubResource("Curve_3ju4k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3ju4k"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.5
spread = 180.0
initial_velocity_min = 147.21
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_min = 10.15
scale_max = 20.0
scale_curve = SubResource("CurveTexture_nkahb")
color_ramp = SubResource("GradientTexture1D_nkahb")

[node name="EffecShiptExplosion" type="Node2D"]
script = ExtResource("1_nkahb")

[node name="ParticleEffect" type="GPUParticles2D" parent="."]
self_modulate = Color(1, 0.183333, 0, 1)
emitting = false
amount = 75
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_3ju4k")

[connection signal="finished" from="ParticleEffect" to="." method="_on_gpu_particles_2d_finished"]
